# vrc-osc-manager

./: .gitignore  .releaserc.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  release.sh
.github/workflows/: pull-request.yml  release.yml  test.yml
assets/: icons.rc
examples/: osc-manager.toml
scripts/: generate-icons.sh
src/: background.rs  config.rs  main.rs  osc.rs  osc_query.rs  tray.rs  ui.rs
src/osc_query/: node.rs  service.rs
src/platform/: linux.rs  mod.rs  windows.rs
src/plugins/: media_control.rs  mod.rs  pishock.rs  watch.rs
src/plugins/media_control/: enigo.rs  mod.rs  mpris.rs
src/tasks/: broadcaster.rs  config_writer.rs  mod.rs  orchestrate.rs  osc_query.rs  osc_receiver.rs  osc_sender.rs  plugin_manager.rs  tray.rs  update_checker.rs  vrchat_monitor.rs
src/tray/: linux.rs  mod.rs  unsupported.rs
src/utils/: config.rs
ui/: app_window.slint  main.slint  tab_bar.slint
ui/pages/: plugins.slint  settings.slint
ui/plugins/: media_control.slint  pishock.slint
ui/widgets/: form_group.slint  overlay.slint  styling.slint
