[package]
name = "vrc-osc-manager"
description = "OSC client for managing VRChat accessories"
version = "1.1.2"
edition = "2021"
authors = ["Ben Scholzen (DASPRiD) <mail@dasprids.de>"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.70"
async-osc = "0.2.0"
cfg-if = "1.0.0"
chrono = "0.4.24"
clap = { version = "4.1.4", features = ["derive"] }
debounced = "0.1.0"
directories = "5.0.1"
file-rotate = "0.7.4"
log = "0.4.17"
reqwest = { version = "0.11.17", features = ["default", "json"], optional = true }
serde = { version = "1.0.163", features = ["derive"] }
simplelog = "0.12.1"
sysinfo = "0.29.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-graceful-shutdown = "0.12.1"
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
toml = "0.7.3"

[build-dependencies]
image = "0.24.6"
embed-resource = "2.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { git = "https://github.com/DASPRiD/tray-item-rs.git", branch = "fix/ksni", features = ["ksni"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-item = { git = "https://github.com/DASPRiD/tray-item-rs.git", branch = "fix/ksni" }

[features]
default = ["pishock", "watch"]
pishock = ["dep:reqwest"]
watch = []
