[package]
name = "vrc-osc-manager"
description = "OSC client for managing VRChat accessories"
version = "3.1.0"
edition = "2021"
authors = ["Ben Scholzen (DASPRiD) <mail@dasprids.de>"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.82"
async-osc = "0.2.0"
chrono = "0.4.38"
directories = "6.0.0"
log = "0.4.21"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "query", "rustls"] }
enigo = { version = "0.6.1" }
searchlight = "0.3.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
serde_repr = "0.1.19"
semver = "1.0.23"
sysinfo = "0.39.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-graceful-shutdown = "0.19.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
toml = "1.1.2"
slint = { version = "1.8.0" }
axum = "0.8.4"
tower = "0.5.1"
async-trait = "0.1.83"
dark-light = "2.0.0"
flexi_logger = "0.31.8"
open = "5.3.0"
indoc = "2.0.5"
notify-rust = "4.11.0"

[build-dependencies]
image = "0.25.10"
embed-resource = "3.0.9"
slint-build = "1.8.0"

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10.0", features = ["ksni"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-item = { version = "0.10.0" }
winreg = "0.56.0"
